--- a/src/main.css
+++ b/src/main.css
@@ -82,6 +82,24 @@ li input {
   margin: 0.5rem 0;
 }
 
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #d2e8fa;
+  padding: 5px;
+}
+
+a {
+  text-decoration: none;
+  color: #086635;
+}
+
+.add-item-form {
+  background: #d9eeff;
+  padding: 10px 5px;
+}
+
 .add-item-form,
 .header {
   display: flex;
